tests/rosetta/out/Go/associative-array-iteration.error
parse: error[P999]: tests/rosetta/x/Mochi/associative-array-iteration.mochi:2:59: unexpected token ":" (expected PostfixExpr)
  --> tests/rosetta/x/Mochi/associative-array-iteration.mochi:2:59

  2 |   let m: map<string, int> = {"hello": 13, "world": 31, "!": 71}
    |                                                           ^

help:
  Parse error occurred. Check syntax near this location.